--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="btn-container main-container">
     <h1 class="heading">pixEtch</h1>
     <h3 class="author">Created by Seanrw93</h3>
-    <a href="https://github.com/seanrw93/pixEtch">
+    <a href="https://github.com/seanrw93/pixEtch" target="_blank">
       <i class="fa fa-github fa-2x"></i>
     </a>
       <div class="input color-btn">
